--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
   <section>
     <h2>🕹️ Dự án & Game mini</h2>
-    <p><a href="game.html">👉 Chơi mini game đoán số tại đây</a></p>
+    <ul style="list-style: none;">
+      <li><a href="game.html">🎮 Game đoán số</a></li>
+      <li><a href="xemboi.html">🔮 Xem bói tổng hợp</a></li>
+      <li><a href="xemchi.html">👋 Xem bói chỉ tay (có thu phí)</a></li>
+    </ul>
   </section>
 </body>
 </html>
